--- a/index.html
+++ b/index.html
@@ -4,10 +4,87 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CHANGE THE TITLE</title>
+    <title>Restaurant finder</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <div class="jumbotron jumbotron-billboard text-center">
+      <div class="img"></div>
+      <div class="container pt">
+        <div class="text-center">
+          <img
+            class="logo"
+            src="https://lh3.googleusercontent.com/PVD2D_swhVpT3YvCCqVNM9xrzs9KB65Lr6fMkTO94XcjRRGguSQsulhBVb8wTfEX3A"
+          />
+        </div>
+        <div class="mt-5 text-color">
+          <h1>Find Restaurants Near You</h1>
+        
+
+            Search
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div>
+        <div class="message col-md-12"></div>
+      </div>
+    </div>
+
+    <div class="wrapper">
+      <main>
+        <h1>Restaurant <span>Search</span></h1>
+        <form action="">
+          <div class="form-wrapper">
+            <label for="restaurant-name">Search</label>
+            <input
+              name="restaurant-name"
+              type="text"
+              id="restaurant-name"
+              placeholder="Search for a restaurant"
+            />
+          </div>
+          <div class="form-wrapper">
+            <label for="city-name">City</label>
+            <input
+              name="city-name"
+              type="text"
+              id="city-name"
+              value="SEATTLE"
+              placeholder="Enter your city"
+              disabled
+            />
+          </div>
+          <input type="submit" />
+        </form>
+      </main>
+      <hr />
+      <section id="restaurant-results"></section>
+    </div>
+
+    <template>
+      <div class="result-card">
+        <div class="result-header">
+          <h2 class="result-title">${title}</h2>
+          <h3 class="result-location result-neighborhood">${neighborhood}</h3>
+          <h3 class="result-location result-address">${address}</h3>
+          <p class="result-price">${price}</p>
+          <!-- <p>${cuisine type}</p> -->
+        </div>
+        <div class="result-body">
+          <img src="" alt="restaurant-photo" class="result-thumbnail" />
+        </div>
+        <div class="result-footer">
+          <button class="result-footer-button">Call</button>
+          <button class="result-footer-button">
+            <a href="" target="_blank" class="result-website">Visit Website</a>
+          </button>
+          <button class="result-footer-button">Make Reservation</button>
+        </div>
+      </div>
+    </template>
+
     <script src="./script.js"></script>
   </body>
 </html>
