took off api key

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </template>
 
     <script type="module" src="./JS/script.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAs1SfCOF6M6e6cIlOTzgvOKvg8UAA3rNQ&v=weekly"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key={}&v=weekly"></script>
     <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
   </body>
 </html>
