--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       </div>
     </template>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key={APIKey}&map_ids=92d78e74df8df401&v=weekly"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAs1SfCOF6M6e6cIlOTzgvOKvg8UAA3rNQ&map_ids=92d78e74df8df401&v=weekly"></script>
     <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
     <script type="module" src="./JS/script.js"></script>
   </body>
