created aboutus section with styles TODO: Alex info and photo TODO: Ethan info and photo Also changed the initial zoom on the map to show the whole search area

--- a/index.html
+++ b/index.html
@@ -74,11 +74,38 @@
       </main>
       <hr />
       <div id="res_container" class="container text-center">
-        <div id="restaurant_results" class="row align-items-center">
+        <div id="restaurant_results" class="row align-items-center justify-content-center">
       <!-- <div class="col-4" id="restaurant_results"></div>
     </div> -->
     </div>
       <section id="map_container"></section>
+    </div>
+    <div id="about_us" class="row align-items-center justify-content-center">
+      <div class="col-12 text-center justify-content-center">
+        <h3>About Us</h3>
+        <hr id="about_hr">
+      </div>
+        <div id="alex" class="card id_card text-center justify-content-center">
+          <img src="./img/alex.jpg" alt="Alex Aguilar's Portrait" class="card-img-top portrait" />
+          <div class="card-body">
+            <h5 class="card-title">Alex Aguilar</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Software Development Apprentice for Amazon.com</h6>  
+          </div>
+        </div>
+        <div id="ethan" class="card id_card text-center justify-content-center">
+          <img src="./img/ethan.jpg" alt="Ethan Wang's Portrait" class="card-img-top portrait" />
+          <div class="card-body">
+            <h5 class="card-title">Ethan Wang</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Software Development Apprentice for Amazon.com</h6>  
+          </div>
+        </div>
+        <div id="joseph" class="card id_card text-center justify-content-center">
+          <img src="./img/joseph.jpg" alt="Joseph Racke's Portrait" class="card-img-top portrait" />
+          <div class="card-body">
+            <h5 class="card-title">Joseph Racke</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Joe is a Software Development Apprentice for Amazon.com since Oct 2022. Her served in the United States Navy for 8 years and currently resides outside Seattle, WA</h6>  
+          </div>
+        </div>
     </div>
 
     <template>
@@ -103,7 +130,7 @@
       </div>
     </template>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=a3tq36A4uNs&map_ids=92d78e74df8df401&v=weekly"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAs1SfCOF6M6e6cIlOTzgvOKvg8UAA3rNQ&map_ids=92d78e74df8df401&v=weekly"></script>
     <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
     <script type="module" src="./JS/script.js"></script>
   </body>
