Added Alex About Us

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <img src="./img/alex.jpg" alt="Alex Aguilar's Portrait" class="card-img-top portrait" />
           <div class="card-body">
             <h5 class="card-title">Alex Aguilar</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Software Development Apprentice for Amazon.com</h6>  
+            <h6 class="card-subtitle mb-2 text-muted">Software Development Apprentice for Amazon.com. Served in the United States Air Force for 10 years and currently resides in Pearl City, HI.</h6>  
           </div>
         </div>
         <div id="ethan" class="card id_card text-center justify-content-center">
