--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <img src="./img/joseph.jpg" alt="Joseph Racke's Portrait" class="card-img-top portrait" />
           <div class="card-body">
             <h5 class="card-title">Joseph Racke</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Joe is a Software Development Apprentice for Amazon.com since Oct 2022. Her served in the United States Navy for 8 years and currently resides outside Seattle, WA</h6>  
+            <h6 class="card-subtitle mb-2 text-muted">Joe is a Software Development Apprentice for Amazon.com since Oct 2022. He served in the United States Navy for 8 years and currently resides outside Seattle, WA</h6>  
           </div>
         </div>
     </div>
