--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restaurant finder</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
+    <!-- Linked CSS Styles using Bootstrap and Custom CSS-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="./CSS/style.css" />
   </head>
   <body>
+    <!-- Title Image Container-->
     <div class="jumbotron jumbotron-billboard text-center">
       <div class="img"></div>
       <div class="container pt">
@@ -27,92 +29,88 @@
         </div>
       </div>
     </div>
-    <div class="container">
-      <div>
-        <div class="message col-md-12"></div>
-      </div>
-    </div>
 
-    <div class="wrapper">
-      <main>
-        <h1>Restaurant <span>Search</span></h1>
-        <form action="" id="form_track">
-          <div class="form-wrapper">
-            <label for="restaurant-name">Search</label>
-            <input
-              name="restaurant-name"
-              type="text"
-              id="restaurant_name"
-              placeholder="Search for a restaurant"
-            />
-          </div>
-          <div class="form-wrapper">
-            <label for="search-radius">Search Radius:</label>
-            <input
-              name="search-radius"
-              type="range"
-              min="1"
-              max="25"
-              value="5"
-              id="search_range_Track"
-            />
-            <span><span id="radius_miles_Track">5</span> miles</span>
-          </div>
-          <input type="submit" />
-        </form>
+    <!-- Main container with restaurant search -->
+    <main class="row justify-content-center">
+      <h1 class="col-12 text-center">Restaurant <span>Search</span></h1>
+      <form class="row" action="" id="form_track">
+        <div class="col-12 form-wrapper">
+          <label class="form-label" for="restaurant-name">Search</label>
+          <input
+            class="form-control"
+            name="restaurant-name"
+            type="text"
+            id="restaurant_name"
+            placeholder="Search for a restaurant"
+          />
+        </div>
+        <div class="col-12 form-wrapper">
+          <label class="form-label" for="search-radius">Search Radius:</label>
+          <input
+            class="form-control"
+            name="search-radius"
+            type="range"
+            min="1"
+            max="25"
+            value="5"
+            id="search_range_Track"
+          />
+          <p class="form-label text-center"><span><span id="radius_miles_Track">5</span> miles</span></p>
+        </div>
+        <input type="submit" />
+      </form>
 
-        <form action="" id="form_noTrack" class="hidden">
-          <div class="form-wrapper">
-            <label for="restaurant-name">Search</label>
-            <input
-              name="restaurant-name"
-              type="text"
-              id="restaurant_name_noTrack"
-              placeholder="Search for a restaurant"
-            />
-          </div>
-          <div class="form-wrapper">
-            <label for="city-name">City</label>
-            <input
-              name="city-name"
-              type="text"
-              id="location_name_noTrack"
-              placeholder="Enter your city"
-              required
-            />
-          </div>
-          <div class="form-wrapper">
-            <label for="search-radius">Search Radius:</label>
-            <input
-              name="search-radius"
-              type="range"
-              min="1"
-              max="25"
-              value="5"
-              id="search_range_noTrack"
-            />
-            <span><span id="radius_miles_noTrack">5</span> miles</span>
-          </div>
-          <input type="submit" />
-        </form>
-      </main>
-      <hr />
-      <div id="res_container" class="container text-center">
-        <div id="restaurant_results" class="row align-items-center justify-content-center">
-      <!-- <div class="col-4" id="restaurant_results"></div>
-    </div> -->
+      <form action="" id="form_noTrack" class="row hidden">
+        <div class="col-12 form-wrapper">
+          <label class="form-label" for="restaurant-name">Search</label>
+          <input
+            class="form-control"
+            name="restaurant-name"
+            type="text"
+            id="restaurant_name_noTrack"
+            placeholder="Search for a restaurant"
+          />
+        </div>
+        <div class="col-12 form-wrapper">
+          <label class="form-label" for="city-name">City</label>
+          <input
+            class="form-control"
+            name="city-name"
+            type="text"
+            id="location_name_noTrack"
+            placeholder="Enter your city"
+            required
+          />
+        </div>
+        <div class="col-12 form-wrapper">
+          <label class="form-label" for="search-radius">Search Radius:</label>
+          <input
+            class="form-control"
+            name="search-radius"
+            type="range"
+            min="1"
+            max="25"
+            value="5"
+            id="search_range_noTrack"
+          />
+          <p class="form-label text-center"><span><span id="radius_miles_noTrack">5</span> miles</span></p>
+        </div>
+        <input type="submit" />
+      </form>
+    </main>
+    <hr />
 
-
-    </div>
+    <!-- Container with Restaurant Cards / Results / Map-->
+    <div id="res_container" class="container text-center">
+      <div id="restaurant_results" class="row align-items-center justify-content-center"></div>
       <section id="map_container"></section>
     </div>
+
+    <!-- Container with About Us section-->
     <div id="about_us" class="row align-items-center justify-content-center">
       <div class="col-12 text-center justify-content-center">
-
-
-
-<br>
-<br>
+        <br>
+        <br>
         <h3>About Us</h3>
         <hr id="about_hr">
       </div>
@@ -139,6 +137,7 @@
         </div>
     </div>
 
+    <!-- Required JS Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAs1SfCOF6M6e6cIlOTzgvOKvg8UAA3rNQ&map_ids=92d78e74df8df401&v=weekly"></script>
     <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
