made a max width for the body of the page Also changed the submit button and centered it using bootstrap

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
           />
           <p class="form-label text-center"><span><span id="radius_miles_Track">5</span> miles</span></p>
         </div>
-        <input type="submit" />
+        <div class="text-center sub_button"><button class="btn btn-primary" type="submit">Submit</button></div>
+        
       </form>
 
       <form action="" id="form_noTrack" class="row hidden">
@@ -95,7 +96,7 @@
           />
           <p class="form-label text-center"><span><span id="radius_miles_noTrack">5</span> miles</span></p>
         </div>
-        <input type="submit" />
+        <div class="text-center sub_button"><button class="btn btn-primary" type="submit">Submit</button></div>
       </form>
     </main>
     <hr />
