Added information for error Also clarified the fields

--- a/index.html
+++ b/index.html
@@ -69,22 +69,22 @@
             name="restaurant-name"
             type="text"
             id="restaurant_name_noTrack"
-            placeholder="Search for a restaurant"
+            placeholder="Search for a restaurant or type"
           />
         </div>
         <div class="col-12 form-wrapper">
-          <label class="form-label" for="city-name">City</label>
+          <label class="form-label" for="city-name">Location</label>
           <input
             class="form-control"
             name="city-name"
             type="text"
             id="location_name_noTrack"
-            placeholder="Enter your city"
+            placeholder="City, Address, etc."
             required
           />
         </div>
         <div class="col-12 form-wrapper">
-          <label class="form-label" for="search-radius">Search Radius:</label>
+          <label class="form-label" for="search-radius">Search Radius (mi):</label>
           <input
             class="form-control"
             name="search-radius"
