--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
           </div>
         </div>
         <div id="ethan" class="card id_card text-center justify-content-center">
-          <img src="./img/ethan.jpg" alt="Ethan Wang's Portrait" class="card-img-top portrait" />
+          <img src="./img/Ethan.jpg" alt="Ethan Wang's Portrait" class="card-img-top portrait" />
           <div class="card-body">
             <h5 class="card-title">Ethan Wang</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Software Development Apprentice for Amazon.com</h6>  
+            <h6 class="card-subtitle mb-2 text-muted">Ethan is a Software Development Apprentice at Amazon. He searved as an airborne infantry in the United States Army and currently resides in NY.</h6>  
           </div>
         </div>
         <div id="joseph" class="card id_card text-center justify-content-center">
