tracking form placeholder/labels updated

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             name="restaurant-name"
             type="text"
             id="restaurant_name"
-            placeholder="Search for a restaurant"
+            placeholder="Search for a restaurant or type"
           />
         </div>
         <div class="col-12 form-wrapper">
-          <label class="form-label" for="search-radius">Search Radius:</label>
+          <label class="form-label" for="search-radius">Search Radius (mi):</label>
           <input
             class="form-control"
             name="search-radius"
