--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Restaurant finder</title>
 
     <!-- Linked CSS Styles using Bootstrap and Custom CSS-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./CSS/style.css" />
   </head>
   <body>
@@ -23,16 +28,14 @@
         </div>
         <div class="mt-5 text-color">
           <h1>Find Restaurants Near You</h1>
-        
-
-          </button>
         </div>
       </div>
     </div>
 
     <!-- Main container with restaurant search -->
     <main class="row justify-content-center">
-      <h1 class="col-12 text-center">Restaurant <span>Search</span></h1>
+      <h1 class="col-12 text-center">Restaurant Search</h1>
+      <!-- location tracking search -->
       <form class="row" action="" id="form_track">
         <div class="col-12 form-wrapper">
           <label class="form-label" for="restaurant-name">Search</label>
@@ -55,12 +58,15 @@
             value="5"
             id="search_range_Track"
           />
-          <p class="form-label text-center"><span><span id="radius_miles_Track">5</span> miles</span></p>
+          <p class="form-label text-center">
+            <span><span id="radius_miles_Track">5</span> miles</span>
+          </p>
         </div>
-        <div class="text-center sub_button"><button class="btn btn-primary" type="submit">Submit</button></div>
-        
+        <div class="text-center sub_button">
+          <button class="btn btn-primary" type="submit">Submit</button>
+        </div>
       </form>
-
+      <!-- location non-tracking search  -->
       <form action="" id="form_noTrack" class="row hidden">
         <div class="col-12 form-wrapper">
           <label class="form-label" for="restaurant-name">Search</label>
@@ -84,7 +90,9 @@
           />
         </div>
         <div class="col-12 form-wrapper">
-          <label class="form-label" for="search-radius">Search Radius (mi):</label>
+          <label class="form-label" for="search-radius"
+            >Search Radius (mi):
+          </label>
           <input
             class="form-control"
             name="search-radius"
@@ -94,52 +102,87 @@
             value="5"
             id="search_range_noTrack"
           />
-          <p class="form-label text-center"><span><span id="radius_miles_noTrack">5</span> miles</span></p>
+          <p class="form-label text-center">
+            <span><span id="radius_miles_noTrack">5</span> miles</span>
+          </p>
         </div>
-        <div class="text-center sub_button"><button class="btn btn-primary" type="submit">Submit</button></div>
+        <div class="text-center sub_button">
+          <button class="btn btn-primary" type="submit">Submit</button>
+        </div>
       </form>
     </main>
     <hr />
 
     <!-- Container with Restaurant Cards / Results / Map-->
     <div id="res_container" class="container text-center">
-      <div id="restaurant_results" class="row align-items-center justify-content-center"></div>
+      <div
+        id="restaurant_results"
+        class="row align-items-center justify-content-center"
+      ></div>
       <section id="map_container"></section>
     </div>
 
     <!-- Container with About Us section-->
     <div id="about_us" class="row align-items-center justify-content-center">
       <div class="col-12 text-center justify-content-center">
-        <br>
-        <br>
+        <br />
+        <br />
         <h3>About Us</h3>
-        <hr id="about_hr">
+        <hr id="about_hr" />
       </div>
-        <div id="alex" class="card id_card text-center justify-content-center">
-          <img src="./img/alex.jpg" alt="Alex Aguilar's Portrait" class="card-img-top portrait" />
-          <div class="card-body">
-            <h5 class="card-title">Alex Aguilar</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Software Development Apprentice for Amazon.com. Served in the United States Air Force for 10 years and currently resides in Pearl City, HI.</h6>  
-          </div>
+      <div id="alex" class="card id_card text-center justify-content-center">
+        <img
+          src="./img/alex.jpg"
+          alt="Alex Aguilar's Portrait"
+          class="img-top portrait"
+        />
+        <div class="card-body">
+          <h5 class="card-title">Alex Aguilar</h5>
+          <h6 class="card-subtitle mb-2 text-muted">
+            Software Development Apprentice for Amazon.com. Served in the United
+            States Air Force for 10 years and currently resides in Pearl City,
+            HI.
+          </h6>
         </div>
-        <div id="ethan" class="card id_card text-center justify-content-center">
-          <img src="./img/Ethan.jpg" alt="Ethan Wang's Portrait" class="card-img-top portrait" />
-          <div class="card-body">
-            <h5 class="card-title">Ethan Wang</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Ethan is a Software Development Apprentice at Amazon. He searved as an airborne infantry in the United States Army and currently resides in NY.</h6>  
-          </div>
+      </div>
+      <div id="ethan" class="card id_card text-center justify-content-center">
+        <img
+          src="./img/Ethan.jpg"
+          alt="Ethan Wang's Portrait"
+          class="card-img-top portrait"
+        />
+        <div class="card-body">
+          <h5 class="card-title">Ethan Wang</h5>
+          <h6 class="card-subtitle mb-2 text-muted">
+            Ethan is a Software Development Apprentice at Amazon. He searved as
+            an airborne infantry in the United States Army and currently resides
+            in NY.
+          </h6>
         </div>
-        <div id="joseph" class="card id_card text-center justify-content-center">
-          <img src="./img/joseph.jpg" alt="Joseph Racke's Portrait" class="card-img-top portrait" />
-          <div class="card-body">
-            <h5 class="card-title">Joseph Racke</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Joe is a Software Development Apprentice for Amazon.com since Oct 2022. He served in the United States Navy for 8 years and currently resides outside Seattle, WA</h6>  
-          </div>
+      </div>
+      <div id="joseph" class="card id_card text-center justify-content-center">
+        <img
+          src="./img/joseph.jpg"
+          alt="Joseph Racke's Portrait"
+          class="card-img-top portrait"
+        />
+        <div class="card-body">
+          <h5 class="card-title">Joseph Racke</h5>
+          <h6 class="card-subtitle mb-2 text-muted">
+            Joe is a Software Development Apprentice for Amazon.com since Oct
+            2022. He served in the United States Navy for 8 years and currently
+            resides outside Seattle, WA
+          </h6>
         </div>
+      </div>
     </div>
 
     <!-- Required JS Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAs1SfCOF6M6e6cIlOTzgvOKvg8UAA3rNQ&map_ids=92d78e74df8df401&v=weekly"></script>
     <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
     <script type="module" src="./JS/script.js"></script>
