synced tracking form to main

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             name="restaurant-name"
             type="text"
             id="restaurant_name"
-            placeholder="Search for a restaurant"
+            placeholder="Search for a restaurant or type"
           />
         </div>
         <div class="col-12 form-wrapper">
